[gd_scene load_steps=28 format=2]

[ext_resource path="res://Enemy/boss/level1/boss1_1/Boss_level1_1.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-0.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-1.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-2.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-3.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-0.png" type="Texture" id=6]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-1.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-2.png" type="Texture" id=8]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-3.png" type="Texture" id=9]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-0.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-1.png" type="Texture" id=11]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-2.png" type="Texture" id=12]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-3.png" type="Texture" id=13]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-0.png" type="Texture" id=14]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-1.png" type="Texture" id=15]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-2.png" type="Texture" id=16]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-3.png" type="Texture" id=17]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-4.png" type="Texture" id=18]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-0.png" type="Texture" id=19]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-1.png" type="Texture" id=20]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-2.png" type="Texture" id=21]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-3.png" type="Texture" id=22]
[ext_resource path="res://Enemy/boss/level1/boss1_1/new_styleboxflat.tres" type="StyleBox" id=23]
[ext_resource path="res://Enemy/boss/level1/boss1_1/bge.tres" type="StyleBox" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.9781, 13.4848 )

[node name="Boss_level1_1" type="KinematicBody2D" groups=[
"save",
]]
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( -0.71, 6 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="spr" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "move"
frame = 1
playing = true

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -12.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 6.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = ExtResource( 23 )
custom_styles/bg = ExtResource( 24 )
value = 50.0
percent_visible = false

[node name="shot" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.601664, -0.902502 )
shape = SubResource( 3 )

[node name="phase1" type="Timer" parent="."]
wait_time = 10.0

[node name="bullet" type="Timer" parent="."]
wait_time = 1.7
one_shot = true
[connection signal="animation_finished" from="spr" to="." method="_on_spr_animation_finished"]
[connection signal="timeout" from="shot" to="." method="_on_shot_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="phase1" to="." method="_on_phase1_timeout"]
[connection signal="timeout" from="bullet" to="." method="_on_bullet_timeout"]
